--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@bett3r-dev/crocks": "^0.12.4",
-    "@bett3r-dev/server-core": "^0.0.2"
+    "@bett3r-dev/server-core": "^0.0.2",
+    "joi": "^17.5.0"
   }
 }
